CTT_Package/objects/ACN_Call_Flow_Conducted__c.object
<CustomObject>
    <fields>
        <fullName>ACN_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Flow Conducted</relationshipLabel>
        <relationshipName>Call_Flow_Conducted</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACN_Call_Flow_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Flow</label>
        <referenceTo>ACN_Call_Flow_Template__c</referenceTo>
        <relationshipLabel>Call Flow Conducted</relationshipLabel>
        <relationshipName>Call_Flow_Conducted</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACN_Call_Flow_title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Call Flow Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACN_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACN_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACN_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Call Flow Conducted</relationshipLabel>
        <relationshipName>Call_Flow_Conducted</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Call Flow Conducted</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CFCN={000000000}</displayFormat>
        <label>Call Flow Conducted Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Flow Conducted</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>